# character-library

./: CHARTER.md  DOCKSIDE-EXAM.md  EXTRACTION_SUMMARY.md  INSTALLATION_GUIDE.md  LICENSE  README.md  TESTING_GUIDE.md  TEST_FILES_CREATED.md  TEST_SUITE_SUMMARY.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  validate_tests.py  verify_installation.py
.github/workflows/: publish.yml  test.yml  validate.yml
character_library/: __init__.py  character_agent_integration.py  character_library_integration.py  character_skill_trees.py
character_library/core/: __init__.py  archetypes.py  skills.py
character_library/emotion/: __init__.py  emotions.py
character_library/personality/: __init__.py  big_five.py  enneagram.py  mbti.py
character_library/relationships/: __init__.py  dynamics.py
docs/: CHARACTER_LIBRARY_INTEGRATION_GUIDE.md
examples/: basic_usage.py  character_demo.py
tests/: README.md  __init__.py  conftest.py  test_archetypes.py  test_emotion.py  test_integration.py  test_personality.py  test_relationships.py  test_skills.py
