[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "character-library"
version = "1.0.0"
description = "Comprehensive personality modeling system for AI characters"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Luciddreamer Team", email = "contact@luciddreamer.ai"}
]
keywords = [
    "ai", "character", "personality", "psychology",
    "big-five", "enneagram", "mbti", "emotions",
    "agent", "simulation", "dialogue", "modeling"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
agent = [
    "hierarchical-memory>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/luciddreamer/character-library"
Documentation = "https://github.com/luciddreamer/character-library/docs"
Repository = "https://github.com/luciddreamer/character-library"
"Bug Tracker" = "https://github.com/luciddreamer/character-library/issues"

[project.scripts]
character-demo = "character_library.examples.demo:main"

[tool.setuptools]
packages = ["character_library"]

[tool.setuptools.package-data]
character_library = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
